--- a/task_radar/client/src/App.css
+++ b/task_radar/client/src/App.css
@@ -1,4 +1,3 @@
-/* Reset & dark background */
 body {
   margin: 0;
   padding: 0;
@@ -8,7 +7,6 @@ body {
   justify-content: center;
 }
 
-/* Centering wrapper */
 .login-wrapper {
   height: 100vh;
   display: flex;
@@ -16,7 +14,6 @@ body {
   align-items: center;
 }
 
-/* Container with border */
 .login-container {
   width: 300px;
   padding: 30px;
@@ -29,7 +26,6 @@ body {
   align-items: stretch;
 }
 
-/* Title */
 .login-title {
   text-align: center;
   margin-bottom: 20px;
@@ -37,7 +33,6 @@ body {
   color: #ffffff;
 }
 
-/* Inputs */
 .login-input {
   padding: 10px;
   margin-bottom: 15px;
@@ -53,7 +48,6 @@ body {
   border-color: #0077ff;
 }
 
-/* Button */
 .login-button {
   padding: 10px;
   background-color: #003e84;
@@ -69,16 +63,19 @@ body {
   background-color: #005fcb;
 }
 .signup-button {
+  width: 100%; 
   padding: 10px;
-  background-color: #28a745; /* green */
+  background-color: #003e84;
   color: #ffffff;
   font-size: 1rem;
   border: none;
   border-radius: 6px;
   cursor: pointer;
   transition: background-color 0.2s ease;
+  text-align: center;
 }
 
+
 .signup-button:hover {
-  background-color: #1f8c36;
+  background-color: #005fcb;
 }
