--- a/task_radar/client/src/App.css
+++ b/task_radar/client/src/App.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: #121212;
+  background-color: #000000;
   font-family: 'Inter', sans-serif;
   color: #f0f0f0;
   justify-content: center;
@@ -19,7 +19,7 @@ body {
   padding: 30px;
   border: 1px solid #333;
   border-radius: 12px;
-  background-color: #1e1e1e;
+  background-color: #100e0e;
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
   display: flex;
   flex-direction: column;
@@ -39,7 +39,7 @@ body {
   border: 1px solid #444;
   border-radius: 6px;
   font-size: 1rem;
-  background-color: #2a2a2a;
+  background-color: #121111;
   color: #f0f0f0;
   outline: none;
 }
@@ -50,7 +50,7 @@ body {
 
 .login-button {
   padding: 10px;
-  background-color: #003e84;
+  background-color: #8a03f8;
   color: #ffffff;
   font-size: 1rem;
   border: none;
@@ -60,12 +60,12 @@ body {
 }
 
 .login-button:hover {
-  background-color: #005fcb;
+  background-color: #8203f8;
 }
 .signup-button {
   width: 100%; 
   padding: 10px;
-  background-color: #003e84;
+  background-color: #8a03f8;
   color: #ffffff;
   font-size: 1rem;
   border: none;
@@ -77,7 +77,7 @@ body {
 
 
 .signup-button:hover {
-  background-color: #005fcb;
+  background-color: #8203f8;
 }
 .file-input-hidden {
   display: none;
@@ -87,7 +87,7 @@ body {
   display: inline-block;
   padding: 10px;
   margin-bottom: 15px;
-  background-color: #2a2a2a;
+  background-color: #121111;
   color: #f0f0f0;
   border: 1px solid #444;
   border-radius: 6px;
@@ -98,5 +98,5 @@ body {
 }
 
 .custom-file-upload:hover {
-  border-color: #0077ff;
+  border-color: #8203f8;
 }
