--- a/task_radar/client/src/App.css
+++ b/task_radar/client/src/App.css
@@ -1,9 +1,9 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: #851a1a;
+  /* background-color: #851a1a; */
   font-family: 'Inter', sans-serif;
-  color: #070000;
+  /* color: #070000; */
   justify-content: center;
 }
 
